--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "mongoose-express-sanitizer": "^2.0.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "xss": "^1.0.15"
   }
