--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
+    "razorpay": "^2.9.6",
     "xss": "^1.0.15"
   }
 }
